...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06999999" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutUsername"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:textColorHint="#EAE3D2"
        app:boxStrokeColor="#EAE3D2"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.26999998"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_lock_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:hint="Password"
        app:boxStrokeColor="#EAE3D2"
        android:textColorHint="#EAE3D2"
        app:hintTextColor="#1C3879">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

...
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toEndOf="@+id/textForgotPassword"
        app:layout_constraintTop_toTopOf="@+id/textForgotPassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#EAE3D2"
        android:fontFamily="@font/poppins"
        android:padding="5dp"
        android:text="Login"
        android:textColor="#1C3879"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
...
