<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/backgorundicon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.120000005">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="307dp"
            android:layout_height="wrap_content"
            android:hint="Username"
            android:textColorHint="#EAE3D2"
            app:boxStrokeColor="#EAE3D2"
            app:hintTextColor="#1C3879"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="307dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="Email"
            android:textColorHint="#EAE3D2"
            app:boxStrokeColor="#EAE3D2"
            app:hintTextColor="#1C3879"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutUsername"
            app:layout_constraintVertical_bias="0.0"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="307dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="Password"
            android:textColorHint="#EAE3D2"
            app:boxStrokeColor="#EAE3D2"
            app:endIconMode="password_toggle"
            app:hintTextColor="#1C3879"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutEmail"
            app:layout_constraintVertical_bias="0.0"
            app:startIconDrawable="@drawable/ic_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTanggalLahir"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="307dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="Tanggal Lahir"
            android:textColorHint="#EAE3D2"
            app:boxStrokeColor="#EAE3D2"
            app:hintTextColor="#1C3879"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutPassword"
            app:layout_constraintVertical_bias="0.0"
            app:startIconDrawable="@drawable/ic_baseline_date_range_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTanggalLahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutNomorTelepon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="307dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="Nomor Telepon"
            android:textColorHint="#EAE3D2"
            app:boxStrokeColor="#EAE3D2"
            app:hintTextColor="#1C3879"
            app:layout_constraintBottom_toTopOf="@id/btnSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutTanggalLahir"
            app:layout_constraintVertical_bias="0.0"
            app:startIconDrawable="@drawable/ic_baseline_phone_iphone_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNomorTelepon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSignUp"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#EAE3D2"
            android:fontFamily="@font/poppins"
            android:text="Sign Up"
            android:textColor="#1C3879"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutTanggalLahir"
            app:layout_constraintVertical_bias="0.61" />

        <TextView
            android:id="@+id/txtAcnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="Have an Account? "
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
            app:layout_constraintVertical_bias="0.07999998" />

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/poppins"
            android:text="Login"
            android:textColor="#1C3879"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toEndOf="@+id/txtAcnt"
            app:layout_constraintTop_toTopOf="@+id/txtAcnt"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
